<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back">
    <View
        android:id="@+id/rectangle_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle"/>
    <RelativeLayout
        android:id="@+id/form"
        android:layout_width="378dp"
        android:layout_height="382dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_centerVertical="true"
        android:background="#FFFFFF"
        android:elevation="4dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edt_cfm_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:importantForAutofill="no" />


            <Button
                android:id="@+id/button"
                android:layout_width="339dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/e44162"
                android:background="#E44162"
                android:text="@string/hint_signup"
                android:textColor="#fff"
                android:textSize="20sp"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                tools:ignore="UselessParent" >
                <TextView
                    android:id="@+id/new_to_aper"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/already"
                    android:textAppearance="@style/new_to_aper"
                    android:gravity="center"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/login"
                    android:textAppearance="@style/signup"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="#CE415E"
                    />
            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>



